Center align section title and subtitle
Added center alignment to section title and subtitle.

--- a/index.html
+++ b/index.html
@@ -186,12 +186,14 @@
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
+            text-align: center;
         }
 
         .section-subtitle {
             color: var(--text-gray);
             font-size: 1.2rem;
             margin-bottom: 60px;
+            text-align: center;
         }
 
         /* Hero Section */
