--- a/index.html
+++ b/index.html
@@ -1014,7 +1014,7 @@
                             <div class="contact-icon">📧</div>
                             <div>
                                 <h4>Email Us</h4>
-                                <a href="mailto:hello@loomandlogic.com">hello@loomandlogic.com</a>
+                                <a href="mailto:loomandlogicagency@gmail.com">loomandlogicagency@gmail.com</a>
                             </div>
                         </div>
                         <div class="contact-method">
